--- a/style.css
+++ b/style.css
@@ -1,23 +1,81 @@
+.crimson-text-regular {
+  font-family: "Crimson Text", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.crimson-text-semibold {
+  font-family: "Crimson Text", serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.crimson-text-bold {
+  font-family: "Crimson Text", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.crimson-text-regular-italic {
+  font-family: "Crimson Text", serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.crimson-text-semibold-italic {
+  font-family: "Crimson Text", serif;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.crimson-text-bold-italic {
+  font-family: "Crimson Text", serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+
+
 body{
-    background: #1fddc7;
+  background-image: linear-gradient(#0ED2F7, #f5af19);
 }
 /* see the invisible */
-* {
-    outline: 2px dotted gray;
-  }
+
   
   main {
-    background: lightgray;
+   margin-inline: 2px;
+    background: #f5af19;
+    outline: 2px solid #0ED2F7;
     
   /*  roughly 640pixels  */
     width: 40em;
     
     /*  fixed center  */
   /*   margin: 0 auto; */
-    margin-inline: auto;
+    margin:auto;
+    
+
   }
   
-  main img {
-    width: 100%;
+  img {
+    width: 34%;
     display: block;
+    margin: auto;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    background-color: #0ED2F7;
+    padding: 10px;
+  }
+  
+  
+  
+  .grid-item {
+    background-color:#f5af19;
+    border: 1px solid #03AC13;
+    padding: 10px;
+    font-size: 20px;
+    text-align: center;
   }
